Full support 1.16.4-1.18.1
- Added relevant classes for 1.16.4/5
- Future-proofed? plugin for possible support for earlier versions by setting language to 1.8 (probably wasn't necessary, but did it in attempt to support 1.16.2/3)
- Fixed bugs that would prevent plugin from working on fresh setup (resource files, error when certain sections in arenaData aren't found)
- Lowered spawn indicator hologram to middle
- Removed dependency on ProtocolLib